--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: cometiphrd
+application: dayreview
 version: v1
 runtime: go
 api_version: go1
@@ -22,7 +22,6 @@ handlers:
   static_files: static/favicon.ico
   upload:  static/favicon.ico
   secure: always
-
 
 - url: /robots.txt
   static_files: static/robots.txt
